--- a/Presentacion-.html
+++ b/Presentacion-.html
@@ -3215,17 +3215,9 @@ slide:not(.current) .plotly.html-widget{
 
 
 
-</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Bibliografía</h2></hgroup><article  id="bibliografía" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Bibliografía</h2></hgroup><article  id="bibliografía" class="smaller ">
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-5" class="smaller ">
-
-<div style="text-align: justify">
-
-
-
-<div/>
-
-</article></slide>
+<p>bibliografia.bib</p></article></slide>
 
 
   <slide class="backdrop"></slide>
